--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,18 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity" android:visibility="visible">
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
+            android:text="Worldwide Public Holiday Calendar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" android:textSize="80sp" android:textAlignment="center"
+            android:textStyle="normal" android:textColorHighlight="#00E20B0B" android:singleLine="false"
+            android:shadowColor="#000C0B0B" tools:visibility="visible" app:autoSizeTextType="none"
+            android:ellipsize="none" android:id="@+id/textView"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
